# y3-bio-python

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
cheatsheets/: collab_cheatsheet.md
data/: ReadsData.csv  Reference Document.txt  reagents.csv
lab01/: 02_variables_and_print.ipynb  03_data_types.ipynb  04_operators_and_mini_programs.ipynb
lecture01/: 01_using_notebooks.ipynb
notebooks/: Project1DNAAnalysis.ipynb
notebooks/W11assignment/: Project2DataImport.ipynb  Project2DepMapAnalysis.ipynb
notebooks/W11assignment_local/: Project2DataImport.ipynb  apply_solution.py
notebooks/assignments/: Assignment1_DepMap_Solution.ipynb  Assignment1_DepMap_Student.ipynb
notebooks/lecture_1/: L1_N1_collab_notebooks.ipynb  L1_N2_variables_and_comments.ipynb  L1_N3_datatypes.ipynb  L1_N4_f_strings.ipynb  L1_N5_lists.ipynb  calculate_volume.ipynb  collab_notebooks.ipynb  final_mw_calulcator.ipynb  for_loops.ipynb  functions.ipynb  lab_calculator_toolkit.ipynb  looping_and_appending.ipynb  paths_and_filesystem.ipynb  reading_and_writing_files.ipynb  variables_and_comments.ipynb
notebooks/lecture_2/: L2_N1_string_manipulation.ipynb  L2_N2_conditionals_practice.ipynb  L2_N3_dictionaries.ipynb  L2_N4_debugging.ipynb  L2_N5_fasta-files.ipynb  L2_P1_dna_analysis_toolkit.ipynb  atr_human.fasta  atr_mouse.fasta
notebooks/lecture_3/: L3_N1_builtin_packages.ipynb  L3_N2_pandas_introduction.ipynb  L3_N3_depmap_analysis.ipynb  L3_N4_pandas_filtering.ipynb  L3_N5_statistics.ipynb  L3_N6_pandas_sorting.ipynb  L3_P1_biological_data_analysis_toolkit.ipynb
(+26 files in other folders)
